Handle all Java unchecked cases